<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:minWidth="350dp"
    android:layout_height="match_parent"
    android:scaleType="centerCrop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/round_phone_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:radius="5dp"
                android:textSize="19sp" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/fromContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_dark_background"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:visibility="gone"
                android:padding="6dp"
                android:text="@string/select_from_contacts"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/simTypeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:visibility="gone"
                android:id="@+id/simType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:checkedButton="@+id/outgoneOption"
                android:orientation="horizontal"
                android:textAlignment="center">

                <RadioButton
                    android:id="@+id/sim1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/sim"
                    android:drawablePadding="6dp"
                    android:text="@string/sim_1" />

                <RadioButton
                    android:id="@+id/sim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/sim"
                    android:drawablePadding="6dp"
                    android:text="@string/sim_2" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/callTypeRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"

                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:checkedButton="@+id/outgoneOption"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/callDuration2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/call_type"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/outgoingOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:drawableStart="@drawable/round_call_made_24"
                    android:drawablePadding="2dp"
                    android:text="@string/outgoing" />

                <RadioButton
                    android:id="@+id/incomeOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:drawableStart="@drawable/round_call_received_24"
                    android:drawablePadding="2dp"
                    android:text="@string/incoming" />

                <RadioButton
                    android:id="@+id/missedOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/missed"
                    android:drawablePadding="2dp"
                    android:text="@string/missed" />

                <RadioButton
                    android:id="@+id/rejectedOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/baseline_call_end_24"
                    android:drawablePadding="2dp"
                    android:text="@string/rejected" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/callDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/call_duration"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/duration_H"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hours"
                        android:inputType="number"
                        android:maxLength="2"
                        android:padding="10dp"
                        android:radius="5dp"
                        android:textAlignment="center"
                        android:textDirection="ltr" />

                    <EditText
                        android:id="@+id/duration_M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/minutes"
                        android:inputType="number"
                        android:maxLength="2"
                        android:padding="10dp"
                        android:radius="5dp"
                        android:textAlignment="center"
                        android:textDirection="ltr" />

                    <EditText
                        android:id="@+id/duration_S"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/seconds"
                        android:inputType="number"
                        android:maxLength="2"
                        android:padding="10dp"
                        android:radius="5dp"
                        android:textAlignment="center"
                        android:textDirection="ltr" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:layout_marginEnd="100dp"
                android:layout_weight="5"
                android:layout_margin="5dp"
                android:lines="2"
                android:text="dasfdsgafdshdshdsfhdfhdhdshsdhdsh"
                android:textAlignment="center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/updateTime"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="Update Time"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_weight="3">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete"
                android:layout_width="150dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="Delete"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="Cancel"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/update"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="Update"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>